--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "typescript": "~5.4.0",
     "typescript-cookie": "^1.0.6",
     "vite": "^5.2.8",
+    "vite-plugin-checker": "^0.6.4",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
     "vue-horizontal-scroll": "^0.2.4",
