--- a/.github/workflows/aedificare.yaml
+++ b/.github/workflows/aedificare.yaml
@@ -14,21 +14,31 @@ jobs:
           node-version: latest
       - name: inaugurare
           run: npm clean-install
-          continue-on-error: false
+      - name: delere
+          if: failure()
+          run: exit 1
       - name: fundamen-struere
           run: npm run build
-          continue-on-error: false
+      - name: delere
+          if: failure()
+          run: exit 1
       - name: verificare
           run: tsc --build --clean
-          continue-on-error: false
+      - name: delere
+          if: failure()
+          run: exit 1
       - name: structura-struere
           run: npm run type-check
-          continue-on-error: false
+      - name: delere
+          if: failure()
+          run: exit 1
 #      - name: tentare
 #          run: npm test --passWithNoTests
 #          env:
 #            CI: true
-#          continue-on-error: false
+#      - name: delere
+#         if: failure()
+#         run: exit 1
 #      - name: invenire
 #          run: local locus=$(grep 'outDir' ./tsconfig.json | awk '{ print $2 }') | tr -dc '[:alpha:]\n'
 #      - name: emissa
