--- a/.github/workflows/expedire.yaml
+++ b/.github/workflows/expedire.yaml
@@ -14,9 +14,7 @@ jobs:
     steps:
       - name: inaugurare
           run: npm install @vue/cli
-      - name: delere
-          if: failure()
-          run: exit 1
+          continue-on-error: false
 #      - name: expedire
 #          run: npm run deploy
 #      - name: delere
