--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-vue": "^9.23.0",
     "execa": "^9.2.0",
+    "fs": "^0.0.1-security",
     "jsdom": "^24.0.0",
+    "make-dir": "^5.0.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.3.2",
     "start-server-and-test": "^2.0.3",
