Update eslint.yml with vue

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -48,3 +48,6 @@ jobs:
         with:
           sarif_file: eslint-results.sarif
           wait-for-processing: true
+      - name: vue-tsc-action
+        uses: keita-hino/vue-tsc-action@v0.1.1
+          
