--- a/package.json
+++ b/package.json
@@ -16,26 +16,20 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "pinia": "^2.1.7",
+    "pleasejs": "^0.4.2",
+    "vue": "^3.4.21"
+  },
+  "devDependencies": {
+    "@8hobbies/typedoc-plugin-404": "^2.2.0",
+    "@droppedcode/typedoc-plugin-relative-includes": "^1.0.5",
+    "@eslint-types/prettier": "^5.1.3",
     "@neoncitylights/sets": "^1.1.0",
+    "@rushstack/eslint-patch": "^1.8.0",
+    "@tsconfig/node20": "^20.1.4",
     "@types/deep-equal": "^1.0.4",
     "@types/file-fetch": "^1.6.6",
     "@types/js-roman-numerals": "^1.1.3",
-    "comma-separated-values": "^3.6.4",
-    "list-files-in-dir": "^0.1.5",
-    "new-tab-opener": "^1.0.2",
-    "pinia": "^2.1.7",
-    "pleasejs": "^0.4.2",
-    "tslib": "^2.6.3",
-    "turbo-ts": "^7.3.1",
-    "vue": "^3.4.21",
-    "vuetify": "^3.6.9",
-    "winston": "^3.13.0",
-    "winston-daily-rotate-file": "^5.0.0"
-  },
-  "devDependencies": {
-    "@eslint-types/prettier": "^5.1.3",
-    "@rushstack/eslint-patch": "^1.8.0",
-    "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.5",
     "@types/pleasejs": "^0.0.33",
@@ -49,20 +43,29 @@
     "amphtml-validator": "^1.0.38",
     "classifyx": "^1.1.0",
     "codeql-agent": "^0.3.4",
+    "comma-separated-values": "^3.6.4",
     "cypress": "^13.7.2",
     "dependabot": "^0.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^2.15.1",
-    "eslint-plugin-vue": "^9.23.0",
-    "execa": "^9.2.0",
+    "eslint-plugin-vue": "^9.26.0",
+    "execa": "^9.3.0",
     "fs": "^0.0.1-security",
     "jsdom": "^24.0.0",
+    "list-files-in-dir": "^0.1.5",
     "make-dir": "^5.0.0",
+    "new-tab-opener": "^1.0.2",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.3.2",
     "start-server-and-test": "^2.0.3",
     "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.6.3",
+    "turbo-ts": "^7.3.1",
     "typedoc": "^0.25.13",
+    "typedoc-github-wiki-theme": "^2.0.0",
+    "typedoc-plugin-markdown": "^4.0.3",
+    "typedoc-plugin-mdn-links": "^3.1.30",
+    "typedoc-plugin-vue": "^1.1.0",
     "typescript": "~5.4.0",
     "typescript-cookie": "^1.0.6",
     "vite": "^5.2.8",
@@ -70,7 +73,10 @@
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
     "vue-horizontal-scroll": "^0.2.4",
-    "vue-tsc": "^2.0.11",
-    "vuedraggable": "^4.1.0"
+    "vue-tsc": "^2.0.21",
+    "vuedraggable": "^4.1.0",
+    "vuetify": "^3.6.10",
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
