--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -25,7 +25,7 @@ jobs:
     permissions:
       security-events: write
       # contents: read
-      # actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      # actions: read
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -50,4 +50,4 @@ jobs:
           wait-for-processing: true
       - name: vue-tsc-action
         uses: keita-hino/vue-tsc-action@v0.1.1
-          
+
