--- a/.github/workflows/aedificare.yaml
+++ b/.github/workflows/aedificare.yaml
@@ -8,6 +8,9 @@ jobs:
   build_vue:
     runs-on:  ubuntu-latest
     name: aedificare
+    continue-on-error: false
+    stategy:
+      fail-fast: true
     steps:
       - uses: actions/checkout
         with:
@@ -16,26 +19,18 @@ jobs:
         with:
           node-version: latest
       - name: inaugurare
-          run: npm install
-          continue-on-error: false
-      - name: fundare
+          run: npm ci
+      - name: fundere
           run: npm run type-check
-          continue-on-error: false
       - name: struere
           run: npm run build
-          continue-on-error: false
       - name: verificare
           run: tsc --build --clean
-          continue-on-error: false
 #      - name: tentare
 #          run: npm test --passWithNoTests
 #          env:
 #            CI: true
-#          continue-on-error: false
 #      - name: invenire
 #          run: local locus=$(grep 'outDir' ./tsconfig.json | awk '{ print $2 }') | tr -dc '[:alpha:]\n'
 #      - name: emissa
 #          run: find ${locus} -type f
-#      - name: delere
-#          if: failure()
-#          run: exit 1
