--- a/.github/workflows/aedificare.yaml
+++ b/.github/workflows/aedificare.yaml
@@ -9,12 +9,12 @@ jobs:
     stategy:
       fail-fast: true
     steps:
-      - uses: actions/checkout
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node
+      - uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: 'latest'
       - name: inaugurare
         run: npm clean-install
       - name: fundere
