--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -31,9 +31,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install ESLint
-        run: |
-          npm install eslint@8.10.0
-          npm install @microsoft/eslint-formatter-sarif@2.1.7
+        run: npm install eslint @microsoft/eslint-formatter-sarif
 
       - name: Run ESLint
         run: npx eslint .
