--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -46,6 +46,6 @@ jobs:
         with:
           sarif_file: eslint-results.sarif
           wait-for-processing: true
-      - name: vue-tsc-action
-        uses: keita-hino/vue-tsc-action@main
+#      - name: vue-tsc-action
+#        uses: keita-hino/vue-tsc-action@main
 
