--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -9,13 +9,7 @@
 
 name: ESLint
 
-on:
-  - push
-  - pull_request:
-      # The branches below must be a subset of the branches above
-      branches: [ "princeps" ]
-  - schedule:
-    - cron: '37 21 * * 3'
+on: [ push pull_request ]
 
 jobs:
   eslint:
