Add deployment script, correct frontend typos

--- a/.github/workflows/aedificare.yaml
+++ b/.github/workflows/aedificare.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: fundere
         run: npm run type-check
       - name: struere
-        run: npm run build
+        run: npm run build-only
       - name: verificare
         run: tsc --build --clean
 #      - name: tentare
