--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "node src/scriptura/expedire.ts"
   },
   "dependencies": {
     "pinia": "^2.1.7",
