--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -9,7 +9,12 @@
 
 name: ESLint
 
-on: [ push, pull_request ]
+on: 
+  pull_request:
+    types: [opened, reopened, edited, synchronized, ready_for_review,review_requested, auto_merge_enabled]
+    paths: [ src/*, res/*, tsconfig*.json ]
+  push:
+    paths: [ src/*, res/*, tsconfig*.json ]
 
 jobs:
   eslint:
