--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@8hobbies/typedoc-plugin-404": "^2.2.0",
     "@droppedcode/typedoc-plugin-relative-includes": "^1.0.5",
     "@neoncitylights/sets": "^1.1.0",
+    "@nuxt/types": "^2.17.4",
+    "@nuxt/typescript-build": "^3.0.2",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/deep-equal": "^1.0.4",
