Dont rebuild license

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -12,9 +12,9 @@ name: ESLint
 on:
   pull_request:
     types: [opened, reopened, edited, ready_for_review, review_requested, auto_merge_enabled]
-    paths-ignore: [ .github, README.md ]
+    paths-ignore: [ .github, README.md, LICENSE.md ]
   push:
-    paths-ignore: [ .github, README.md ]
+    paths-ignore: [ .github, README.md, LICENSE.md ]
 
 jobs:
   eslint:
